--- a/sub_app/templates/search.html
+++ b/sub_app/templates/search.html
@@ -1,6 +1,10 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<h2>Display result</h2>
+{{ text }}
+
+<h2> Search Result</h2>
 <form method='POST' action ="{% url 'search' %}">
 {% csrf_token %}
   <label for="search">Search:</label><br>
@@ -10,8 +14,8 @@
 
 Name   |   Email 
 <br>
-{% for q in query_key %}
-{{ q.name }}    | {{q.email}}
+{% for upload in query_key %}
+{{ upload.upload_text.name }}    | {{upload.upload_text.email}} | {{ upload.texts }}
 <br>
 {% endfor %}
 
