--- a/sub_app/templates/base.html
+++ b/sub_app/templates/base.html
@@ -2,17 +2,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
 	<title></title>
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
-Header
+
+
+<div class='container'>
 {% block content %}
 
 {% endblock %}
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{% static 'app.js' %}"></script>
-Footer
+
+
 </body>
 </html>
