--- a/sub_app/templates/home.html
+++ b/sub_app/templates/home.html
@@ -54,11 +54,8 @@
         </div>
       </section>
 
-      <section class="sound-clips">
-
-
-      </section>
-      <div ><h2 id="response"></h2></div>
+      <!-- <section class="sound-clips"></section> -->
+      <!-- <div ><h2 id="response"></h2></div> -->
     </div>
 
     
