--- a/sub_app/templates/home.html
+++ b/sub_app/templates/home.html
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <!-- <section class="sound-clips"></section> -->
+      <section class="sound-clips"></section>
       <!-- <div ><h2 id="response"></h2></div> -->
     </div>
 
