--- a/sub_app/templates/base.html
+++ b/sub_app/templates/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	<title></title>
+	<title>EzShifa Voice Recorder</title>
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
