--- a/sub_app/templates/home.html
+++ b/sub_app/templates/home.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+<img src="{% static "ai_brain.jpg" %}"  alt="Responsive image" width="100%" height="400">
 
-
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Ez Shifa AI based doctor finder</h1>
+    <p class="lead">Record your symptoms to find the best suited doctor for your cure</p>
+  </div>
+</div>
 
 <form action="" method="post" enctype="multipart/form-data"> 
     {% csrf_token %}
@@ -26,9 +33,7 @@
     <input type="submit" value="Submit">
 </form>
 
+<br><br><br>
 
-{{ text }}
 
-
-{{ print }}
 {% endblock %}
