--- a/sub_app/templates/home.html
+++ b/sub_app/templates/home.html
@@ -36,4 +36,23 @@
 <br><br><br>
 
 
+<h2> Demo Sentences </h2>
+<h3>English</h3>
+<ul>
+  <li>I am looking for a heart specialist as i am having chest pain. Can you refer someone?</li>
+  <li>There are alot of acne scars on my skin.</li>
+  <li>I want to visit a docot as there is pain in my mouth</li>
+  <li> I am feeling depressed , looking for an appointment</li>
+</ul>
+<h3>Urdu</h3>
+
+<ul>
+  <li>میرے پیٹ میں درد ہورہا ہے </li>
+  <li>میری آنکھوں میں جلن اور خارش ہورہی ہے</li>
+  <li>سیڑھیاں اترتے اور چڑھتے ہوے میرے گٹھنوں میں درد ہوتا ہے </li>
+  <li>میرے گلے میں سوزش ہے،   مجھے مطلوبہ ڈاکر کے بارے میں بتایں</li>
+</ul>
+
+
+
 {% endblock %}
